Fix responsiveness on mobile screens

--- a/styles.css
+++ b/styles.css
@@ -111,8 +111,6 @@ body {
 
 
 
-
-
 .attribution {
 	font-size: 11px;
 	text-align: center;
@@ -122,4 +120,12 @@ body {
 
 .attribution a {
 	color: hsl(227, 11%, 84%);
+}
+
+
+/* ----RESPONSIVE DESIGN---- */
+@media (max-width: 767px)  {
+    .advice-card {
+        margin: 0 1rem;
+    }
 }
